# mdrepo-rs

./: .gitignore  AUTHORS  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml  update_release_table.py
libmdrepo/: Cargo.toml
libmdrepo/proptest-regressions/: metadata.txt
libmdrepo/src/: common.rs  constants.rs  lib.rs  metadata.rs  metadatav1.rs
libmdrepo/tests/inputs/metadata/: MDR00015378.v1.toml  MDR00015378.v2.toml  bad1.json  bad1.toml  bad2.toml  bad3.toml  expected.bad1.txt  expected.example.json  expected.example.toml  minimal.toml  minimal_bad1.toml  minimal_bad2.toml  minimal_mult_traj.toml  ok1.json  ok1.toml
mdr-db/: Cargo.toml
mdr-db/src/: lib.rs  models.rs  ops.rs  schema.rs
mdr-db/tests/: docker-compose.yml  finders.rs  with-testdb.sh
mdr-db/tests/fixtures/: schema.sql
mdr-export/: Cargo.toml
mdr-export/src/: main.rs  types.rs
mdr-gen-meta/: Cargo.toml
mdr-gen-meta/src/: main.rs  types.rs
mdr-meta/: Cargo.toml  README.md
mdr-meta/src/: generate.rs  main.rs  types.rs
mdr-meta/tests/: cli.rs
mdr-process/: Cargo.toml  TODO.md
mdr-process/src/: import.rs  lib.rs  main.rs  process.rs  reprocess.rs  ticket.rs  types.rs  validate.rs
mdr-process/tests/inputs/: doi-crossref.json  doi.json
mdr-process/tests/inputs/simproc/sample1/: ar.dcd
mdr-toml-convert/: Cargo.toml
mdr-toml-convert/src/: main.rs
mdr-webcheck/: Cargo.toml  Makefile  README.md  endpoints.toml
mdr-webcheck/src/: json.rs  main.rs  types.rs
src/: common.rs  constants.rs  lib.rs  main.rs  metadata.rs  metadata1.rs  process.rs  reprocess.rs  ticket.rs  types.rs  validate.rs
tests/: validate.rs
tests/inputs/metadata/: bad1.json  minimal_bad2.toml  ok1.json
tests/inputs/simproc/sample1/: ar.prmtop  mdrepo-metadata.toml  mdrepo-submission.completed.json  mdrepo-submission.inprogress.json
tests/inputs/toml/: MDR00015378.v2.toml  bad1.toml  minimal_bad1.toml  ok1.toml
