[package]
name = "mdr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.2"
chksum-md5 = "0.1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
sha1 = "0.10.6"
toml = "0.9.11"
which = "8.0.0"
