[package]
name = "libmdrepo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4"
lazy-regex = "3"
log = "0.4.29"
purr = "0.9.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
validator = { version = "0.20.0", features = ["derive"] }
which = "8.0.2"

[dev-dependencies]
proptest = "1"
