[package]
name = "mdr-db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
utoipa = { version = "5", features = ["chrono", "uuid"] }
