[package]
name = "mdr-db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2", features = ["postgres", "chrono", "uuid", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
utoipa = { version = "5", features = ["chrono", "uuid"] }

[dev-dependencies]
diesel = { version = "2.2", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
