[package]
name = "mdr-meta"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
libmdrepo = { path = "../libmdrepo" }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
