[package]
name = "mdr-meta"
version = "0.3.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
libmdrepo = { path = "../libmdrepo" }
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
