[package]
name = "mdr-process"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chksum-md5 = "0.1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
multiset = "0.0.5"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
toml = "0.9.11"
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }
which = "8.0.0"
libmdrepo = { path = "../libmdrepo" }
dotenvy = "0.15.7"

[dev-dependencies]
assert_cmd = "2.1.2"
