[package]
name = "mdr-process"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chksum-md5 = "0.1.0"
clap = { version = "4", features = ["derive"] }
csv = "1.4.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
libmdrepo = { path = "../libmdrepo" }
log = "0.4.29"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
strum = "0.28"
strum_macros = "0.28"
toml = "0.9.11"
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.1.2"
tempfile = "3"
