[package]
name = "mdr-webcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
